<resources>
    <string name="app_name">Bangkit F Class</string>
    <string name="btn_list_label">Go To List</string>
    <string name="btn_fragment_label">Go To Fragment</string>
    <string name="btn_background_label">Go To Background</string>
    <string name="btn_network_label">Go To Network</string>
    <string name="btn_shared_pref_label">Go To Shared Preferences</string>
    <string name="btn_sqlite_label">Go To SQLite</string>
    <string name="btn_content_provider_label">Go To Content Provider</string>

    <string name="run_background_task_handler_label">Run Background Task Handler</string>
    <string name="run_background_task_coroutine_label">Run Background Task Coroutine</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="login_label">Login</string>
    <string name="add_label">Add</string>
    <string name="list_books_in_database_label">List Books in Database</string>
    <string name="get_phone_list_label">Get Phone List</string>
</resources>