<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_to_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_list_label"
        android:textAllCaps="false" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_to_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_fragment_label"
        android:textAllCaps="false" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_to_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_background_label"
        android:textAllCaps="false" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_to_network"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_network_label"
        android:textAllCaps="false" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_to_shared_pref"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_shared_pref_label"
        android:textAllCaps="false" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_to_sqlite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_sqlite_label"
        android:textAllCaps="false" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_to_content_provider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_content_provider_label"
        android:textAllCaps="false" />

</LinearLayout>